--- a/papers/miniConf2017/miniConf2017.tex
+++ b/papers/miniConf2017/miniConf2017.tex
@@ -354,11 +354,11 @@ OCanren -- DSL для типобезопасного встраивания mini
 \begin{frame}[fragile]{Как сделано в OCanren?}
 
 \begin{itemize}
- \item Один тип для разделения логических переменных от конкретных термов.
+ \item Один тип для разделения логических переменных от конкретных термов
     \begin{lstlisting}[mathescape=true]
       type $\alpha$ logic = Var of int | Value of $\alpha$
     \end{lstlisting}
- \item Который используется в пользовательских типах.
+ \item который используется в пользовательских типах.
 
  \pause
  \item Полиморфная унификация -- \emph{одна} для всех типов.
@@ -396,6 +396,29 @@ OCanren -- DSL для типобезопасного встраивания mini
   \end{lstlisting}
 \end{frame}
 
+
+\begin{frame}[fragile]{Типобезопасность (пример)}
+\begin{lstlisting}[mathescape=true]
+type $\alpha$ logic = Var of int | Value of $\alpha$
+...
+val x : $\alpha$ logic
+val s : string logic
+...
+(x === s)
+...
+!\pause!
+val n : int logic
+... (x === n) ...
+\end{lstlisting}
+\begin{verbatim}
+Error: 
+  This expression has type int logic
+  but an expression was expected of type string logic
+  Type int is not compatible with type string
+\end{verbatim}
+
+\end{frame}
+
 \begin{frame}[fragile]{Промежуточные результаты}
 Были представлены на ML Workshop 2016 (совмещённым с ICFP 2016)
 \begin{itemize}
@@ -414,167 +437,6 @@ OCanren -- DSL для типобезопасного встраивания mini
 \end{enumerate}
 
 \end{frame}
-
-% \begin{frame}[fragile]{Dealing with Typed Terms}
-% \pause
-% \begin{itemize}
-%   \item Non-solution:
-%      \begin{itemize}
-%         \item implement unification for a fixed term representation;
-%         \item convert user-type data to- and from that universal representation.
-%       \end{itemize}\pause
-%       {\small\bf\textcolor{red}{Does not help in detecting the mistakes statically}}\pause
-%   \item Bad solution: generate boilerplate unification code for each user type
-%       (there is no direct support for $ad-hoc$ polymorphism in OCaml yet).\pause
-%
-%       {\small\textcolor{red}{\bf Boilerplatish}}\pause
-%
-%       {\small\textcolor{red}{\bf Users would need to adjust their types to represent logical variables}}\pause
-%   \item Polymorphic unification:
-%
-%     $$
-%      \equiv\;\colon \Sigma\to\alpha\to\alpha\to\Sigma_{\perp}
-%     $$\pause
-%     \small
-%     {\bf\textcolor{red}{Has to be implemented in an untyped manner}}
-%     \pause
-%
-%     {\bf\textcolor{green}{Might be a good solution (lightweight, efficient), if
-%     type safety is justified}}
-% \end{itemize}
-%
-% \end{frame}
-
-% \begin{frame}[fragile]{Полиморфная унификация}
-% 
-% Работает для всех \emph{логических} типов $\alpha\; logic$ (он же $\oo{\alpha}$):
-% 
-% $$
-% \equiv\;\colon \Sigma\to\oo{\alpha}\to\oo{\alpha}\to\Sigma_{\perp}
-% $$
-% \pause
-% 
-% Реализована как сравнение представлений значений в памяти.
-% \pause
-% % % \begin{figure}
-% % % \centering
-% % % \includegraphics[width=0.5\textwidth]{img0.eps}
-% % % \end{figure}
-% 
-% \begin{lstlisting}[mathescape=true]
-% type 'a logic = Var of int | Value of 'a
-% ...
-% val x : 'a logic
-% val s : string logic
-% ...!\pause!
-% (x === s)
-% ...
-% !\pause!
-% val n : int logic
-% ... (x === n) ...
-% 
-% Error: This expression has type int logic
-%        but an expression was expected of type string logic
-%        Type int is not compatible with type string
-% \end{lstlisting}
-% 
-% \vskip3mm
-% Pitfalls:
-% 
-% \begin{itemize}
-% \item compiler loses the track of types after the results of unification
-% are stored in a substitution $\leadsto$ refinement has to be implemented untyped as well;\pause
-% \item the safety of unification/refinement implementation has to be justified separately;\pause
-% \item states must not escape their scope (otherwise the coherence between variable
-% types and terms, stored in states, can be lost).
-% \end{itemize}
-% \end{frame}
-
-
-% \begin{frame}[fragile]{Properties of Polymorphic Unification}
-% It can be shown, that for our concrete implementation:
-%
-% \begin{itemize}
-% \item variables in a substitution are always associated with the terms of the same type;
-% \item all variables preserve their types, assigned by the compiler;
-% \item all variables occur in terms only in a ``type-safe'' positions:
-%
-% $$
-% t[x] \iff \mbox{the type of }x\mbox{ corresponds to the type of the hole of }t
-% $$
-% \end{itemize}\pause
-%
-% $$\leadsto$$
-%
-% the refinement is type-safe, if a variable is refined in a state, which is an inheritor
-% of the state that variable was created in.
-% \end{frame}
-
-% \begin{frame}[fragile]{Capturing the States}
-% States and refinement function are hidden and can not be accessed directly.\pause
-% \vskip3mm
-% The refinement is performed transparently as the top-level running primitive
-% is invoked:\pause
-% \vskip3mm
-% \begin{lstlisting}[mathescape=true]
-%     run $\bar{n}$ (fun $q_1\;q_2\;\dots\;q_n\;$ -> $\;\;$g) (fun $a_1\;a_2\;\dots\;a_n\;$ -> $\;\;$h)
-% \end{lstlisting}\pause
-%
-% Here:
-% {\small
-% \begin{itemize}
-% \item \lstinline{run}~--- the only way to run goals;
-% \item $\bar{n}$~--- a \emph{numeral}, describing the number of fresh variables,
-% available for running the goal \lstinline{g}; numerals can be manufactured
-% \emph{quantum satis} using the successor function, which is provided as well;
-% \item $q_1, q_2\dots q_n$~--- these fresh variables;
-% \item $a_1, a_2\dots a_n$~--- the streams of \emph{refined} answers for the variables
-% $q_1, q_2\dots q_n$ respectively;
-% \item \lstinline{h}~--- a \emph{handler}, which can make use of refined answers.
-% \end{itemize}
-% }
-%
-% The framework guarantees, that variables are refined only in correct states.
-%
-% \end{frame}
-
-% \begin{frame}[fragile]{Converting from- and to User Types}
-%
-% \small
-% Injecting a user-type into logic domain and projecting the
-% logical results back:
-%
-% $$
-% \begin{array}{rcl}
-% \uparrow_t&\colon &t \to \oo{t}\\
-% \downarrow_t&\colon& \oo{t} \to t
-% \end{array}
-% $$
-% \pause
-% Can be done systematically using generic programming:
-%
-% \begin{itemize}
-% \item ``$\uparrow_\forall$'', ``$\downarrow_\forall$'' are polymorphic shallow injection/projection;
-% \item for the deep case, make the type a functor and use $fmap$.
-% \end{itemize}
-% \pause
-% \begin{lstlisting}[mathescape=true]
-% type tree = Leaf of int | Node of tree * tree!\pause!
-% $\leadsto$
-% type ('int, 'tree) tree$_f$ = Leaf of 'int | Node of 'tree * 'tree!\pause!
-% type tree  = (int, tree) tree$_f$!\pause!
-% type tree$^o$ = ((int$^o$, tree$^o$) tree$_f$)$^o$!\pause!
-%
-% let rec ($\uparrow_{\mbox{\small\ttfamily tree}}$) t = $\uparrow_\forall$ (!\graybox{$fmap_{\mbox{\small\ttfamily tree}_f}$}! ($\uparrow_\forall$) ($\uparrow_{\mbox{\small\ttfamily tree}}$) t)!\pause!
-% let rec ($\downarrow_{\mbox{\small\ttfamily tree}}$) l = !\graybox{$fmap_{\mbox{\small\ttfamily tree}_f}$}! ($\downarrow_\forall$) ($\downarrow_{\mbox{\small\ttfamily tree}}$) ($\downarrow_\forall$ l)
-%
-% \end{lstlisting}
-% \end{frame}
-
-% \begin{frame}{Результаты сравнения производительности}
-% \centering
-% \includegraphics[scale=0.85]{histo1.pdf}
-% \end{frame}
 
 \begin{frame}[fragile]{Дальнейшие задачи}
   \begin{itemize}
@@ -725,7 +587,7 @@ $$
   \pause
 
   Примитив \lstinline{distrib}, который позволяет конструировать из значений типа \lstinline{(_, _) injected} 
-  другие значния типа \lstinline{(_, _) injected}.
+  другие значения типа \lstinline{(_, _) injected}.
   \vskip 1cm
   Он ничего не делает со значением (identity).
   
